# MessengerApp

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  main.cpp
